# internal/model/report/model.go
@@ -1,24 +1,24 @@
 package report
 
 import (
-	"neatly/internal/model/tag"
+	"neatly/internal/model/label"
 	"strings"
 	"time"
 )
 
 const (
 	DefaultReportDepartment = "CFD2CF"
-	shortBodyLen     = 255
+	shortBodyLen            = 255
 )
 
 type Report struct {
-	ID        int       `json:"id" db:"id"`
-	Header    string    `json:"header" db:"header"`
-	Body      string    `json:"body" db:"body"`
-	ShortBody string    `json:"shortBody" db:"short_body"`
-	Tags      []tag.Tag `json:"tags" db:"tags"` // []tag.Tag
-	Department     string    `json:"department" db:"department"`
-	Edited    time.Time `json:"edited"`
+	ID         int           `json:"id" db:"id"`
+	Header     string        `json:"header" db:"header"`
+	Body       string        `json:"body" db:"body"`
+	ShortBody  string        `json:"shortBody" db:"short_body"`
+	Labels     []label.Label `json:"labels" db:"labels"` // []label.Label
+	Department string        `json:"department" db:"department"`
+	Edited     time.Time     `json:"edited"`
 }
 
 func (n *Report) GenerateShortBody() {
@@ -29,18 +29,18 @@ func (n *Report) GenerateShortBody() {
 	}
 }
 
-func (n *Report) HasEveryTag(tagNames []string) bool {
-	for _, tn := range tagNames {
-		if !n.HasSpecificTag(tn) {
+func (n *Report) HasEveryLabel(labelNames []string) bool {
+	for _, tn := range labelNames {
+		if !n.HasSpecificLabel(tn) {
 			return false
 		}
 	}
 	return true
 }
 
-func (n *Report) HasSpecificTag(tagName string) bool {
-	for _, t := range n.Tags {
-		if strings.Contains(strings.ToLower(t.Name), strings.ToLower(tagName)) {
+func (n *Report) HasSpecificLabel(labelName string) bool {
+	for _, t := range n.Labels {
+		if strings.Contains(strings.ToLower(t.Name), strings.ToLower(labelName)) {
 			return true
 		}
 	}
